[package]
name = "gpt_for_uds"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sagen <alexander@sagen.dev>"]
description = "A GPT client making it easy to use ChatGPT by exposing a simple API over UDS"

[dependencies]
byteorder = "1.5"
tokio = { version = "1.35.1", features = ["full"] }
chatgpt_rs = { version = "1.2.3", features = ["default", "streams"] }
futures-util = { version = "0.3.17", features = ["default"] }
futures = "0.3.29"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "gpt_for_uds"
path = "src/main.rs"

[[bin]]
name = "gpt_for_uds_client"
path = "src/client.rs"
