[package]
name = "gpt_for_uds"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Sagen <alexander@sagen.dev>"]
description = "A GPT client making it easy to use ChatGPT by exposing a simple API over UDS"

[dependencies]
byteorder = "1.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
chatgpt_rs = { version = "1.2.3", features = ["json", "streams"] }
futures = { version = "0.3.30", features = ["async-await", "std", "executor"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }

[[bin]]
name = "gpt_for_uds"
path = "src/main.rs"

[[bin]]
name = "gpt_for_uds_client"
path = "src/client.rs"

[profile.release]
lto = true # Enable link-time optimization.
opt-level = "z"  # Optimize for size.
strip = true # Strip symbols from the binary.
codegen-units = 1 # Disable parallel codegen to allow for more optimization
panic = "abort" # Abort on panic to reduce binary size
